root 폴더명 변경

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "knock_at",
-    "short_name": "knock_at",
+    "name": "nugget",
+    "short_name": "nugget",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
