--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,25 +37,19 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.3.9
   font_awesome_flutter: ^10.6.0
-  kakao_flutter_sdk: ^1.8.0
   flutter_svg: ^2.0.9
   google_fonts: ^6.1.0
   image_picker: ^1.0.7
-  kakao_flutter_sdk_user: ^1.8.0 # 카카오 로그인
-  kakao_flutter_sdk_talk: ^1.8.0 # 카카오톡 메시지, 카카오톡 소셜(프로필 가져오기, 친구 목록 가져오기)
-  kakao_flutter_sdk_share: ^1.8.0 # 카카오톡 공유
-  kakao_flutter_sdk_navi: ^1.8.0 # 카카오내비
-  kakao_flutter_sdk_friend: ^1.8.0 # 카카오톡 소셜(피커: 친구 선택하기)
   flex_color_scheme: ^7.3.1
-  kpostal: ^0.5.1
   flutter_riverpod: ^2.4.9
   riverpod_annotation: ^2.3.3
   dio: ^5.4.0
   shared_preferences: ^2.2.2
-  flutter_web_auth: ^0.5.0
   http: ^1.2.0
-  flutter_web_auth_2: ^3.1.1
   flutter_secure_storage: ^9.0.0
+  camera: ^0.10.5+9
+  permission_handler: ^11.2.0
+  flutter_naver_map: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -80,6 +74,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/logo/
+    - assets/icons/
+  
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
