--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   camera: ^0.10.5+9
   permission_handler: ^11.2.0
   flutter_naver_map: ^1.1.2
+  geolocator: ^10.1.0
 
 
 dev_dependencies:
