--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dependencies:
   permission_handler: ^11.2.0
   flutter_naver_map: ^1.1.2
   geolocator: ^10.1.0
-
+  flutter_tts: ^3.8.5
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +63,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -79,7 +80,6 @@ flutter:
   assets:
     - assets/logo/
     - assets/icons/
-  
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
