--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_client_sse: ^2.0.1
   flutter_local_notifications: ^9.4.0
   google_maps_flutter: ^2.5.3
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
