--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   tflite_flutter: ^0.10.1
   image: ^4.1.7
   path_provider: ^2.1.2
+  flutter_config: ^2.0.2
 
 dev_dependencies:
   flutter_test:
