--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   flutter_native_splash: ^2.3.9
   font_awesome_flutter: ^10.6.0
   flutter_svg: ^2.0.9
-  google_fonts: ^6.1.0
+  google_fonts: 6.1.0
   image_picker: ^1.0.7
   flex_color_scheme: ^7.3.1
   flutter_riverpod: ^2.4.9
@@ -69,7 +69,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_launcher_icons: "^0.13.1"
-  
+
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
@@ -100,13 +100,13 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  # assets:
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
   assets:
     - assets/logo/
     - assets/icons/
     - assets/models/
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
